app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
/* ... */
//todo: merge with detail container as interactive vs non-interactive list.
div.list-container {
  padding-right: $pageLeftPadding + 17px; /* 17px is the width of the scroll bar */

  div.list-title-bar {
    padding-bottom: 12px;
    border-bottom: 2px solid $heat-scale-4;
    overflow: auto;
    font: $subhead-font;
    color: $heat-scale-2;
    text-transform: uppercase;
  }

  div.list-entry-container {
    min-height: 123px;
    border-bottom: 1px solid $heat-scale-4;
    overflow: hidden;

    div.list-entry-title{
      width: 60%;
      h2 {
        font: $headline-font;
      }
    }

    div.list-entry-description {
      padding-top: 12px;
      padding-bottom: 12px;
      color: $heat-scale-1;
      font: $body-one-font;
    }

    .list-detail-text {
      padding-top: 24px;
      font: $body-one-font;

      .list-detail-gray-text {
        color: $heat-scale-1;
      }

      .list-detail-black-text {
        color: $black;
      }
    }
  }

  div.list-category-container {
    height: 24px;

    div.list-category-detail {
      padding-top: 5px;
      font: $subhead-font;
      color: $heat-scale-1;
    }
  }
}

.learn-search-input {
  clear: both;
  display: block;
  margin: 32px 0 12px 28px;
  width: 40%;

  tbody,
  tr,
  td.x-form-item-body {
    display: block;
    width: 400px!important;
  }

  input {
    width: 400px;
    padding: 16px 12px;
    font-size: 12px;
    border-radius: 2px;
    border-color: $gray-7!important;

  }
  input.x-form-focus {
    border-color: $gray-6!important;
    color: $black;
  }
}

.learn-study-info {

  tr > td {
    padding-bottom: 1em;
    vertical-align: top;

    &.item-label {
      color: $secondary-text-color;
      padding-right: 1em;
      width: 130px;
    }
  }
}

.reportinfo {
  font-family: Georgia, serif;
  .reportinfoheader {
    font-size: 18px;
    padding-bottom: 5px;
  }
  .reportinfoname {
    width: 120px;
    display: inline-block;
    font-size: 16px;
    font-weight: bold;
  }
  .reportinfovalue {
    font-size: 16px;
  }

}

.reportView {
  padding-top: $sectionTopPadding;
  width: 100% !important;
  background-color: white;
  padding-left: $pageLeftPadding;
}

.reportContent {
  padding-left: 28px;
  padding-top: 10px;
  background-color: #ffffff;
}

.learnpageheader {
  background-color: $gray-7;
}

.learnFilter {
  .imgbutton {
    width: 21px!important;
    height: 21px!important;
    top: 26px!important;
    left: 228px!important;
  }

  .sorter {
    span.sorter-label {
      font-size: 12px;
      text-transform: none;
      display: block;
      color: $gray-25;
      padding: 0 0 4px 0;
    }

    span.sorter-content {
      font-size: 12px;
      margin: 4px 0 20px 0;
      padding: 4px 8px;
      display: block;
      @include prefixer(border-radius, 2px);
      background-color: $white;
      border: 1px solid $gray-6;
      line-height: 22px;
      height: 32px;
      width: 253px;
    }

    @include smallStandout;
  }
}
.learn-report-info {
  width: 100%;
  padding-left: $pageLeftPadding;
}

.learn-report-header-column {
  width: 50%;
  padding-right: 10px;
}

.reportmodulecontainer {
  padding-top: $sectionTopPadding;
}

.reportlearngrid
{
  .detail-row{
    .x-grid-cell-inner {
      white-space: normal;
      padding: 0px 0px 0px 16px;
    }
  }
}

